fixed labels in validation demo